--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
 # Site settings
-title: Zetsu
-email: zetsu@domain.com
-description: Um lindo tema feito para jekyll e com o <3
-baseurl: "/zetsu"
-url: "http://nandomoreira.me"
+title: Numy
+email: info@numy.io
+description: A simple blog.
+baseurl: "/"
+url: "http://numy.io"
 
 author:
-  name     : 'Fernando Moreira'
-  email    : hi@nandomoreira.me
-  url      : http://nandomoreira.me
-  facebook : http://facebook.com/fernando.dev
-  twitter  : http://twitter.com/nandomoreirame
+  name     : 'Numy Media'
+  email    : info@numy.io
+  url      : http://numy.io
+  facebook : http://facebook.com/numyio
+  twitter  : http://twitter.com/numyio
 
-github: https://github.com/nandomoreirame/zetsu
-disqus_shortname: "fernandomoreira"
-google_analytics: UA-52446115-1
+github: https://github.com/numyio/zetsu
+disqus_shortname: "numyio"
+google_analytics: # UA-52446115-1
 
 paginate: 2
 comments: true
