url for comments disgus

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author:
   twitter  : http://twitter.com/numyio
 
 github: https://github.com/numyio/zetsu
-disqus_shortname: "numyio"
+disqus_shortname: "https-numyio-github-io-zetsu"
 google_analytics: # UA-52446115-1
 
 paginate: 2
