update to shortname again

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author:
   twitter  : http://twitter.com/numyio
 
 github: https://github.com/numyio
-disqus_shortname: "numy.blog"
+disqus_shortname: "numy-blog"
 google_analytics: # UA-52446115-1
 
 paginate: 2
