updated blog posts

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Numy
 email: info@numy.io
-description: A simple blog.
+description: A tech thing.
 baseurl: "/blog"
 url: "http://numyio.github.io"
 
